--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -17,10 +17,16 @@
             <a class="nav-link active" href="/">처음으로</a>
             <a class="nav-link" href="/posts/new">결산</a>           
             
-            <a class="nav-link" href="/posts">엔빵</a>
+            <a class="nav-link" href="/post_ns/new">엔빵</a>
             <a class="nav-link" href="/posts">myPage</a>
-            
-
+            <a class="nav-link" href="/post_ns">엔빵Page</a>
+            <a class="nav-link" href="/freeposts">자유게시판</a>
+            <% if user_signed_in? %>
+              <%= link_to '로그아웃', destroy_user_session_path, method: :delete, class: "nav-link" %>
+             <% else %>
+              <%= link_to '로그인', new_user_session_path, class: "nav-link" %>
+              <%= link_to '회원가입', new_user_registration_path, class: "nav-link" %>
+             <% end %>           
           </nav>
        
       </header>
