--- a/app/views/posts/index.html.erb
+++ b/app/views/posts/index.html.erb
@@ -28,4 +28,5 @@
 
 <br>
 
-<%= link_to 'New Post', new_post_path %>
+<%= link_to 'New Post', new_post_path %><br>
+<a href="/posts/all">다른 사람이 쓴 것도 보기</a>
