--- a/app/views/posts/show.html.erb
+++ b/app/views/posts/show.html.erb
@@ -16,6 +16,6 @@
 </p>
 
 
-<a href="/posts/new">결산</a>
+<a href="/posts/<%= @post.id%>/check">명단확인</a>
 <%= link_to 'Edit', edit_post_path(@post) %> |
 <%= link_to 'Back', posts_path %>
