--- a/app/views/posts/show.html.erb
+++ b/app/views/posts/show.html.erb
@@ -15,6 +15,49 @@
   <%= @post.etc %>
 </p>
 
+<%=form_for Table.new, url:post_table_index_path(post_id: @post.id) do |f|%>
+  <%=f.label "항목"%>
+  <%=f.text_field :item %>
+  
+  <%=f.label "수량"%>
+  <%=f.number_field :EA %>
+
+  <%=f.label "가격"%>  
+  <%=f.number_field :price %>
+
+  <%=f.label "총액"%>  
+  <%=f.number_field :total %>  
+  <%=f.label "비고"%>
+  <%=f.text_field :etc %>  
+  
+  <%=f.submit '제출'%>
+<% end %>
+
+<table class="table">
+  <tr>
+    <th>항목</th>
+    <th>수량</th>
+    <th>가격</th>
+    <th>총액</th>
+    <th>비고</th>
+    <th>삭제</th>
+  </th>
+  
+  <%@post.tables.each do |table|%>
+    <tr>
+      <td><%=table.item%></td>
+      <td><%=table.EA%></td>
+      <td><%=table.price%></td>
+      <td><%=table.total%></td>
+      <td><%=table.etc%></td>
+      <td>
+        <%= link_to '삭제', post_table_path(@post.id,table.id), method: 'delete'%>
+      </td>
+    </tr>
+    
+  <% end%>
+</table>
+
 
 <a href="/posts/<%= @post.id%>/check">명단확인</a>
 <%= link_to 'Edit', edit_post_path(@post) %> |
