--- a/app/views/check/index.html.erb
+++ b/app/views/check/index.html.erb
@@ -1,1 +1,39 @@
-여기는 돈 명단 확인하는 폼
+
+
+<form action="/posts/<%= @post.id%>/check" method="post">
+    <input type="string" name="gets">
+    <input type="submit" value="입력">
+</form>
+
+안 낸사람
+
+<% @checks_sort.each do |x| %>
+    <% if x.money != 1 %>
+        <form action="/posts/<%= @post.id%>/check/yes/<%=x.id%>" mehtod="post">
+            <%= x.name %>
+            <input type="submit" value="확인">
+        </form>
+    <% end %>
+<% end %>
+<br>ㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡ<br>
+
+낸사람
+<% @checks.each do |x| %>
+    <% if x.money == 1 %>
+        <form action="/posts/<%= @post.id%>/check/no/<%=x.id%>" mehtod="post">
+            <%= x.name %>
+            <input type="submit" value="확인">
+        </form>
+    <% end %>
+<% end %>
+<br>
+<a class="nav-link" href="/posts">목록보기</a>
+<br>
+
+<% @checks.each do |x| %>
+이름 <%= x.name%> <br>
+<a href="/posts/<%= @post.id%>/check/edit/<%=x.id%>">수정하기</a> <br>
+<a href="/posts/<%= @post.id%>/check/destroy/<%=x.id%>">삭제하기</a><br>
+-----------------------<br>
+<% end %>
+ 
