--- a/app/views/posts/index.html.erb
+++ b/app/views/posts/index.html.erb
@@ -8,6 +8,8 @@
       <th>Date</th>
       <th>Title</th>
       <th>Etc</th>
+      <th>총액</th>
+      <th>사람 수</th>
       <th colspan="3"></th>
     </tr>
   </thead>
@@ -18,6 +20,9 @@
         <td><%= post.date %></td>
         <td><%= post.title %></td>
         <td><%= post.etc %></td>
+        <td><%= post.total_price %></td>
+        <td><%= post.member %></td>
+        
         <td><%= link_to 'Show', post %></td>
         <td><%= link_to 'Edit', edit_post_path(post) %></td>
         <td><%= link_to 'Destroy', post, method: :delete, data: { confirm: 'Are you sure?' } %></td>
