--- a/app/views/posts/show.html.erb
+++ b/app/views/posts/show.html.erb
@@ -57,8 +57,9 @@
     </tr>
   
   <% end%>
+  <% @post.total_price = a %>
   <tr>
-    <th><%=a%></th>
+    <th><%=@post.total_price%></th>
   </tr>
 </table>
 
