--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -1,1 +1,11 @@
+@import url('http://fonts.googleapis.com/earlyaccess/notosanskr.css');
 @import "bootstrap";
+
+
+.navi
+{font-family: "Noto Sans KR" ;
+font-weight: 700 ;
+color: white ; 
+}
+
+body {background-color: #566389;}
