--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -5,32 +5,32 @@
     <%= csrf_meta_tags %>
 
     <%= stylesheet_link_tag    'application', media: 'all', 'data-turbolinks-track': 'reload' %>
-    <%= javascript_include_tag 'application', 'data-turbolinks-track': 'reload' %>
+    <%= javascript_include_tag 'application', 'data-turbolinks-track': 'reload' %> 
+    <link href="https://fonts.googleapis.com/css?family=Open+Sans" rel="stylesheet">
   </head>
 
    <body class="text-center container">
-  <div class="cover-container d-flex w-100 h-100 p-3 mx-auto flex-column">
-      <header class="masthead mb-auto">
-        <div class="inner">
-          <h3 class="masthead-brand main-title">NEXT X 멋쟁이사자처럼</h3>
-          <nav class="nav nav-masthead justify-content-center">
-            <a class="nav-link active" href="/">처음으로</a>
-            <a class="nav-link" href="/posts/new">결산</a>           
-            
-            <a class="nav-link" href="/post_ns/new">엔빵</a>
-            <a class="nav-link" href="/posts">myPage</a>
-            <a class="nav-link" href="/post_ns">엔빵Page</a>
-            <a class="nav-link" href="/freeposts">자유게시판</a>
-            <% if user_signed_in? %>
-              <%= link_to '로그아웃', destroy_user_session_path, method: :delete, class: "nav-link" %>
-             <% else %>
-              <%= link_to '로그인', new_user_session_path, class: "nav-link" %>
-              <%= link_to '회원가입', new_user_registration_path, class: "nav-link" %>
-             <% end %>           
-          </nav>
-       
-      </header>
-    </div> 
+      
+        <div class="cover-container d-flex w-100 h-100 p-3 mx-auto flex-column">
+          <header class="masthead mb-auto">
+            <div class="inner">
+              <nav class="nav nav-masthead justify-content-center">
+                  <a class="nav-link navi" href="/">Tothefirstpart</a>
+
+                  <a class="nav-link navi" href="/posts">myPage</a>
+                  <a class="nav-link navi" href="/post_ns">엔빵Page</a>
+                  <a class="nav-link navi" href="/freeposts">자유게시판</a>
+                      <% if user_signed_in? %>
+                    <%= link_to '로그아웃', destroy_user_session_path, method: :delete, class: "nav-link navi" %>
+                    <% else %>
+                      <%= link_to '로그인', new_user_session_path, class: "nav-link navi" %>
+                      <%= link_to '회원가입', new_user_registration_path, class: "nav-link navi" %>
+                    <% end %> 
+                       
+              </nav>
+            </div> 
+          </header>
+        </div>   
     <%= yield %>
   </body>
 </html>
