--- a/app/views/posts/show.html.erb
+++ b/app/views/posts/show.html.erb
@@ -24,9 +24,7 @@
 
   <%=f.label "가격"%>  
   <%=f.number_field :price %>
-
-  <%=f.label "총액"%>  
-  <%=f.number_field :total %>  
+  
   <%=f.label "비고"%>
   <%=f.text_field :etc %>  
   
@@ -41,21 +39,28 @@
     <th>총액</th>
     <th>비고</th>
     <th>삭제</th>
-  </th>
-  
+  </tr>
+  <% a = 0%>
   <%@post.tables.each do |table|%>
     <tr>
+    
       <td><%=table.item%></td>
       <td><%=table.EA%></td>
       <td><%=table.price%></td>
+     <% table.total = table.EA*table.price%> 
       <td><%=table.total%></td>
+    <% a = a + table.total%>
       <td><%=table.etc%></td>
       <td>
         <%= link_to '삭제', post_table_path(@post.id,table.id), method: 'delete'%>
       </td>
     </tr>
-    
+  
   <% end%>
+  <% @post.total_price = a %>
+  <tr>
+    <th><%=@post.total_price%></th>
+  </tr>
 </table>
 
 
