--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -11,21 +11,23 @@
 
    <body class="text-center container">
       
-        <div class="cover-container d-flex w-100 h-100 p-3 mx-auto flex-column">
+        <div class="cover-container">
           <header class="masthead mb-auto">
             <div class="inner">
-              <nav class="nav nav-masthead justify-content-center">
+              <nav class="nav nav-masthead">
+                <div class="d-flex justify-content-start">
                   <a class="nav-link navi" href="/">Tothefirstpart</a>
-
-                  <a class="nav-link navi" href="/posts">myPage</a>
-                  <a class="nav-link navi" href="/post_ns">엔빵Page</a>
                   <a class="nav-link navi" href="/freeposts">자유게시판</a>
+                </div>
+                <div class="d-flex justify-content-end">   
+                  <a class="nav-link navi" href="/posts">myPage</a>
                       <% if user_signed_in? %>
                     <%= link_to '로그아웃', destroy_user_session_path, method: :delete, class: "nav-link navi" %>
                     <% else %>
                       <%= link_to '로그인', new_user_session_path, class: "nav-link navi" %>
                       <%= link_to '회원가입', new_user_registration_path, class: "nav-link navi" %>
-                    <% end %> 
+                    <% end %>
+                </div>     
                        
               </nav>
             </div> 
