--- a/app/views/post_ns/_form.html.erb
+++ b/app/views/post_ns/_form.html.erb
@@ -22,6 +22,16 @@
   </div>
 
   <div class="field">
+    <%= f.label :total_price %>
+    <%= f.number_field :total_price %>
+  </div>
+
+  <div class="field">
+    <%= f.label :member %>
+    <%= f.number_field :member %>
+  </div>
+
+  <div class="field">
     <%= f.label :etc %>
     <%= f.text_field :etc %>
   </div>
