--- a/app/views/post_ns/show.html.erb
+++ b/app/views/post_ns/show.html.erb
@@ -1,5 +1,4 @@
 <p id="notice"><%= notice %></p>
-
 <p>
   <strong>Date:</strong>
   <%= @post_n.date %>
@@ -10,6 +9,32 @@
   <%= @post_n.title %>
 </p>
 
+<div class="container-fluid d-flex justify-content-center">
+<table >
+<thead>
+  <tr>
+    <th>총액</th>
+    <th>인원</th> 
+    <th>인당</th>
+  </tr>
+</thead>
+
+<tbody>
+  <tr>
+   <td><%= @post_n.total_price %></td>
+   <td><%= @post_n.member %></td>
+   <td>
+    <% if @post_n.total_price.to_i != 0 %>
+    <%= @post_n.total_price.to_i / @post_n.member.to_i  %>
+    <% else %>
+    <%= puts "Error" %>
+    <%end%>
+   </td>
+ </tbody>
+ </table>
+ </div>  
+
+<br>
 <p>
   <strong>Etc:</strong>
   <%= @post_n.etc %>
