--- a/app/views/freeposts/show.html.erb
+++ b/app/views/freeposts/show.html.erb
@@ -1,14 +1,20 @@
 <p id="notice"><%= notice %></p>
-
 <p>
   <strong>Title:</strong>
   <%= @freepost.title %>
 </p>
-
 <p>
   <strong>Content:</strong>
   <%= @freepost.content %>
 </p>
-
-<%= link_to 'Edit', edit_freepost_path(@freepost) %> |
-<%= link_to 'Back', freeposts_path %>
+<%=form_for Comment.new, url:freepost_comments_path(@freepost.id) do |f|%>
+<%=f.label "댓글" %>
+<%=f.text_field :content%> <br>
+<%=f.submit "작성" %> <br>
+  <%@freepost.comments.each do |comment| %>
+    <%=comment.content%> <%=link_to '댓글삭제',
+    freepost_comment_path(@freepost.id, comment.id), method: 'delete'%><br>
+  <% end %>
+<%= link_to '게시물수정', edit_freepost_path(@freepost) %> 
+<%= link_to '뒤로가기', freeposts_path %>
+<% end %>
