--- a/app/views/freeposts/index.html.erb
+++ b/app/views/freeposts/index.html.erb
@@ -7,6 +7,7 @@
     <tr>
       <th>Title</th>
       <th>Content</th>
+      <th>User</th>
       <th colspan="3"></th>
     </tr>
   </thead>
@@ -16,6 +17,7 @@
       <tr>
         <td><%= freepost.title %></td>
         <td><%= freepost.content %></td>
+       <td><%=  freepost.username %></td>
         <td><%= link_to 'Show', freepost %></td>
         <td><%= link_to 'Edit', edit_freepost_path(freepost) %></td>
         <td><%= link_to 'Destroy', freepost, method: :delete, data: { confirm: 'Are you sure?' } %></td>
