--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -8,4 +8,7 @@ font-weight: 700 ;
 color: white ; 
 }
 
-body {background-color: #566389;}
+.body 
+{background-image: url("index_background.jpg");
+background-size: 100%;
+background-color: #566389;}
