--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -1,10 +1,10 @@
 
 <html>
-    <body class="container">
-    <%# <div topmargin="300px"> %>
-    <h1 style="color:white; font-size:500%; " >아마겟돈</h1>
-    <%# </div> %>
+    
+    <div class="index_name"></div>
+    <h1 style="color:white; font-size:500%;">아마겟돈</h1>
+    
  
     <p></p>
-    </body>
+   </body>
 </html>
