--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -8,7 +8,13 @@ font-weight: 700 ;
 color: white ; 
 }
 
-.body 
+.index_name
+{
+
+}
+
+body 
 {background-image: url("index_background.jpg");
 background-size: 100%;
-background-color: #566389;}
+background-color: #566389;
+}
