소소한 수정

--- a/app/views/post_ns/index.html.erb
+++ b/app/views/post_ns/index.html.erb
@@ -18,7 +18,7 @@
         <td><%= post_n.date %></td>
         <td><%= post_n.title %></td>
         <td><%= post_n.etc %></td>
-        <td><%= link_to 'Show', post_n %></td>
+        <td><a href="/post_ns/<%= post_n.id%>/check_n">명단확인</a></td>
         <td><%= link_to 'Edit', edit_post_n_path(post_n) %></td>
         <td><%= link_to 'Destroy', post_n, method: :delete, data: { confirm: 'Are you sure?' } %></td>
       </tr>
