--- a/app/views/check/index.html.erb
+++ b/app/views/check/index.html.erb
@@ -12,9 +12,12 @@
         <form action="/posts/<%= @post.id%>/check/yes/<%=x.id%>" mehtod="post">
             <%= x.name %>
             <input type="submit" value="확인">
+        <form action="/posts/<%= @post.id%>/check/yes/<%=x.id%>" mehtod="delete">
+            <input type="submit" value="삭제">
         </form>
     <% end %>
 <% end %>
+
 <br>ㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡ<br>
 
 낸사람
@@ -23,17 +26,14 @@
         <form action="/posts/<%= @post.id%>/check/no/<%=x.id%>" mehtod="post">
             <%= x.name %>
             <input type="submit" value="확인">
+        <form action="/posts/<%= @post.id%>/check/yes/<%=x.id%>" mehtod="delete">
+            <input type="submit" value="삭제">
         </form>
     <% end %>
 <% end %>
 <br>
-<a class="nav-link" href="/posts">목록보기</a>
+<a class="nav-link" href="/posts/<%= @post.id%>">뒤로가기</a>
+<a class="nav-link" href="/posts">글목록보기</a>
 <br>
-
-<% @checks.each do |x| %>
-이름 <%= x.name%> <br>
-<a href="/posts/<%= @post.id%>/check/edit/<%=x.id%>">수정하기</a> <br>
-<a href="/posts/<%= @post.id%>/check/destroy/<%=x.id%>">삭제하기</a><br>
 -----------------------<br>
-<% end %>
  
