--- a/app/views/freeposts/show.html.erb
+++ b/app/views/freeposts/show.html.erb
@@ -1,4 +1,3 @@
-<p id="notice"><%= notice %></p>
 
 <p>
   <strong>Title:</strong>
@@ -10,5 +9,10 @@
   <%= @freepost.content %>
 </p>
 
-<%= link_to 'Edit', edit_freepost_path(@freepost) %> |
+  <% if current_user == @freepost.user%>
+        <td><%= link_to '수정하기', edit_freepost_path(@freepost) %></td>
+        <td><%= link_to '삭제하기', @freepost, method: :delete, data: { confirm: 'Are you sure?' } %></td>
+         <% else%>
+         <td></td>
+         <%end%>
 <%= link_to 'Back', freeposts_path %>
