--- a/app/views/posts/index.html.erb
+++ b/app/views/posts/index.html.erb
@@ -2,12 +2,11 @@
 
 <h1>Posts</h1>
 
-<table>
+<table class="table">
   <thead>
     <tr>
-      <th>Date</th>
-      <th>Title</th>
-      <th>Etc</th>
+      <th>날짜</th>
+      <th>제목</th>
       <th>총액</th>
       <th>사람 수</th>
       <th colspan="3"></th>
@@ -16,16 +15,13 @@
 
   <tbody>
     <% @posts.each do |post| %>
-      <tr>
+      <tr class="tabletext">
         <td><%= post.date %></td>
-        <td><%= post.title %></td>
-        <td><%= post.etc %></td>
+        <td><%= link_to post.title, post %></td>
         <td><%= post.tables.sum("total") %></td>
         <td><%= post.member %></td>
-        
-        <td><%= link_to 'Show', post %></td>
-        <td><%= link_to 'Edit', edit_post_path(post) %></td>
-        <td><%= link_to 'Destroy', post, method: :delete, data: { confirm: 'Are you sure?' } %></td>
+        <td><%= link_to '수정하기', edit_post_path(post) %></td>
+        <td><%= link_to '삭제하기', post, method: :delete, data: { confirm: 'Are you sure?' } %></td>
       </tr>
     <% end %>
   </tbody>
