--- a/app/views/posts/show.html.erb
+++ b/app/views/posts/show.html.erb
@@ -67,5 +67,12 @@
 
 
 <a href="/posts/<%= @post.id%>/check">명단확인</a>
-<%= link_to 'Edit', edit_post_path(@post) %> |
+
+     <% if current_user == @post.user%>
+        <td><%= link_to '수정하기', edit_post_path(@post) %></td>
+        <td><%= link_to '삭제하기', @post, method: :delete, data: { confirm: 'Are you sure?' } %></td>
+         <% else%>
+         <td></td>
+         <%end%>
+ |
 <%= link_to 'Back', posts_path %>
