--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -19,7 +19,7 @@
                     </div>
                     <div>
                     <a class="navi" href="/posts">기획</a>
-                    <a class="navi" href="/posts_ns">결산</a>
+                    <a class="navi" href="/post_ns">결산</a>
                     <a class="navi" href="/freeposts">자유게시판</a>
                     </div>
                     
