--- a/app/views/post_ns/index.html.erb
+++ b/app/views/post_ns/index.html.erb
@@ -1,8 +1,7 @@
-<p id="notice"><%= notice %></p>
-
+<div class="container">
 <h1>Post Ns</h1>
 
-<table>
+<table class="table">
   <thead>
     <tr>
       <th>Date</th>
@@ -29,3 +28,4 @@
 <br>
 
 <%= link_to 'New Post N', new_post_n_path %>
+</div>
