--- a/app/views/posts/index.html.erb
+++ b/app/views/posts/index.html.erb
@@ -1,5 +1,4 @@
-<p id="notice"><%= notice %></p>
-
+<div class="container">
 <h1>Posts</h1>
 
 <table class="table">
@@ -31,3 +30,4 @@
 
 <%= link_to 'New Post', new_post_path %><br>
 <a href="/posts/all">다른 사람이 쓴 것도 보기</a>
+</div>
