--- a/app/views/posts/show.html.erb
+++ b/app/views/posts/show.html.erb
@@ -67,5 +67,7 @@
 
 
 <a href="/posts/<%= @post.id%>/check">명단확인</a>
+<a href="/posts/<%= @post.id%>/middlecheck">중간확인</a>
+
 <%= link_to 'Edit', edit_post_path(@post) %> |
 <%= link_to 'Back', posts_path %>
