--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -62,3 +62,27 @@ a:visited {
     text-decoration: none;
 }
 
+.bdsize {
+    max-width: 500px;
+    width: 300px;
+    margin-top: 120px;
+    margin-left: 200px;
+
+}
+
+.formbg {
+    background-color: transparent;
+}
+.texttr {
+    opacity: 0.5;
+}
+
+.textsize {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+}
+
+.mt-7 {
+    margin-top: 7erm;
+}
