--- a/app/views/devise/registrations/new.html.erb
+++ b/app/views/devise/registrations/new.html.erb
@@ -1,35 +1,36 @@
-<h2>Sign up</h2>
-
-<%= form_for(resource, as: resource_name, url: registration_path(resource_name)) do |f| %>
-  <%= devise_error_messages! %>
-
-  <div class="field">
-    <%= f.label :email %><br />
-    <%= f.email_field :email, autofocus: true, autocomplete: "email" %>
+<div class="container text-center text-white d-flex justify-content-center" >
+  <div class="textsize">
+    <h1>아마겟돈</h1>
+    <p>텍스트를 여기다가 길게 그럴싸하게 쓰면 됩니다</p>
   </div>
+  <div class="border border-white rounded bdsize">
+    <h1 class="my-5">Sign up</h1>
+    <%= form_for(resource, as: resource_name, url: registration_path(resource_name)) do |f| %>
+      <%= devise_error_messages! %>
 
-  <div class="field">
-    <%= f.label :username %><br />
-    <%= f.text_field :username, autofocus: true, autocomplete: "username" %>
+      <div class="field mb-3 mt-4 formbg">
+        <%= f.email_field :email, autofocus: true, autocomplete: "email", class: "formbg text-white border-top-0 border-right-0 border-left-0", placeholder: "Email"  %>
+      </div>
+
+      <div class="field my-3 formbg">
+        <%= f.text_field :username, autofocus: true, autocomplete: "username", class: "formbg text-white border-top-0 border-right-0 border-left-0", placeholder: "Name" %>
+      </div>
+
+
+      <div class="field my-3 formbg">
+        <%= f.password_field :password, autocomplete: "off", class: "formbg text-white border-top-0 border-right-0 border-left-0", placeholder: "PassWord" %>
+      </div>
+
+      <div class="field my-3 formbg">
+        <%= f.password_field :password_confirmation, autocomplete: "off", class: "formbg text-white border-top-0 border-right-0 border-left-0", placeholder: "PassWord_confirmation" %>
+      </div>
+
+      <div class="actions my-4">
+        <%= f.submit "Sign up",  class: "btn btn-info" %>
+      </div>
+    <% end %>
+    <%= render "devise/shared/links" %>
+    <br>
   </div>
-
-
-  <div class="field">
-    <%= f.label :password %>
-    <% if @minimum_password_length %>
-    <em>(<%= @minimum_password_length %> characters minimum)</em>
-    <% end %><br />
-    <%= f.password_field :password, autocomplete: "off" %>
-  </div>
-
-  <div class="field">
-    <%= f.label :password_confirmation %><br />
-    <%= f.password_field :password_confirmation, autocomplete: "off" %>
-  </div>
-
-  <div class="actions">
-    <%= f.submit "Sign up" %>
-  </div>
-<% end %>
-
-<%= render "devise/shared/links" %>
+  
+</div>
