--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -1,10 +1,39 @@
+<div class="container">
+    <!--위녀석-->
+    <div>
+        <br>
+        <br>
+        <br>
+        <br>
+    <div>
+    
+    <div class="inf text-center">
+    <br>
+    <%= image_tag("form_icon.svg", :alt => "rss feed", :size => "160x120") %>
+    <br>
+    <br>
+    <span class="text-white" >ㅣ 당신의 편리한 수금을 위해 제공된 폼을 작성해주세요! ㅣ</span>
+    <br>
+    <br>
+    <br>
+    <br>
+    </div>
 
-<html>
-    
-    <div class="index_name"></div>
-    <h1 style="color:white; font-size:500%;">아마겟돈</h1>
-    
- 
-    <p></p>
-   </body>
-</html>
+    <!--아래메뉴두녀석-->
+    <br>
+    <br>
+    <br>
+   
+    <div class="d-flex justify-content-around">
+        <!--왼쪽메뉴-->
+        <div class="bt ml-5">
+        <button type="button" class="btn btn-info" onclick="location.href = '/posts';">기획안 작성하기</button>
+        
+        </div>
+
+        <!--오른쪽메뉴-->
+        <div class='bt mr-5'>
+        <button type="button" class="btn btn-info" onclick="location.href = '/post_ns';">결산안 작성하기</button>
+        </div>
+    </div>
+</div>
