--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -7,9 +7,10 @@ table{
     text-align: center;
 }
 
-.container {
-    text-align: center;
-}
+.ff{
+    background-color: transparent !important;
+    color: white !important;
+    }
 
 //-sy
 
@@ -41,6 +42,8 @@ color: gainsboro ;
     border-right-style: solid;
     border-left-style: solid;
 }
+
+
 
 .ft {
     color: gray ;
