--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -27,13 +27,13 @@
     <div class="d-flex justify-content-around">
         <!--왼쪽메뉴-->
         <div class="bt ml-5">
-        <button type="button" class="btn btn-info" onclick="location.href = '/posts';">기획안 작성하기</button>
+        <button type="button" class="btn btn-info" onclick="location.href = '/posts/new';">기획안 작성하기</button>
         
         </div>
 
         <!--오른쪽메뉴-->
         <div class='bt mr-5'>
-        <button type="button" class="btn btn-info" onclick="location.href = '/post_ns';">결산안 작성하기</button>
+        <button type="button" class="btn btn-info" onclick="location.href = '/post_ns/new';">결산안 작성하기</button>
         </div>
     </div>
 </div>
