--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -13,7 +13,7 @@
       <div class="topnav sticky-top">
             <nav class="navbar">
                 <!--왼쪽-->
-                <div class="container">
+                <div class="container text-center">
                     <div>
                     
                     <a class="navi1" href="/"><%= image_tag("dollar_icon.svg", :alt => "rss feed", :size => "40x30") %>아마겟돈</a>
