--- a/app/views/posts/_form.html.erb
+++ b/app/views/posts/_form.html.erb
@@ -11,22 +11,33 @@
     </div>
   <% end %>
 
-  <div class="field">
+<div class="form-group container">
+  <div class="ff field">
     <%= f.label :date %>
-    <%= f.date_select :date %>
+    <br>
+    <%= f.date_select :date, class: "ff form-control text-center" %>
   </div>
-
+  <br>
   <div class="field">
-    <%= f.label :title %>
-    <%= f.text_field :title %>
+    <%= f.label :title, class: "ff text-left" %>
+    <%= f.text_field :title, class: "ff form-control" %>
   </div>
-
+  <br>
   <div class="field">
-    <%= f.label :etc %>
-    <%= f.text_field :etc %>
+    <%= f.label :etc, class: "ff text-left" %>
+    <%= f.text_field :etc, class: "ff form-control" %>
   </div>
-
-  <div class="actions">
-    <%= f.submit %>
+  <br>
+  <div class="d-flex">
+    <div class="actions">
+      <button type="submit" class="btn btn-info">
+      제출
+      </button>
+    &nbsp    
+    </div>
+    <button class="btn btn-info">
+      <%= link_to '뒤로', posts_path %>
+      </button>
   </div>
 <% end %>
+</div>
