--- a/app/views/posts/new.html.erb
+++ b/app/views/posts/new.html.erb
@@ -1,5 +1,7 @@
-<h1>New Post</h1>
+<br>
+<br>
+<h1 class="text-center text-white">New Post</h1>
 
 <%= render 'form', post: @post %>
 
-<%= link_to 'Back', posts_path %>
+
