--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -9,7 +9,7 @@
     <link href="https://fonts.googleapis.com/css?family=Open+Sans" rel="stylesheet">
   </head>
 
-   <body class>
+   <body class="text-center text-white container"> 
       <div class="topnav sticky-top">
             <nav class="navbar">
                 <!--왼쪽-->
