--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -62,3 +62,21 @@ a:visited {
     text-decoration: none;
 }
 
+
+
+a1 {
+    color: whitesmoke;
+    font-size: 20px;
+    font-weight: 600;
+    padding: 80px 20%;
+  }
+
+.titlemake {
+    padding: 20px 30px;
+    width: 70%;
+}
+
+.contentmake {
+    padding: 20px 30px;
+    width: 70%;
+}
