--- a/app/views/freeposts/show.html.erb
+++ b/app/views/freeposts/show.html.erb
@@ -1,18 +1,49 @@
+<p id="notice"><%= notice %></p>
 
-<p>
-  <strong>Title:</strong>
-  <%= @freepost.title %>
-</p>
+<a1> 제목 </a1>
+<div class = "d-flex justify-content-center">
+    <ul class="list-group">
+        <li class="list-group-item bg-light" style="width:800px; height:50px;">
+        <%= @freepost.title %></li>
+    </ul>
+</div>
 
-<p>
-  <strong>Content:</strong>
-  <%= @freepost.content %>
-</p>
 
-  <% if current_user == @freepost.user%>
-        <td><%= link_to '수정하기', edit_freepost_path(@freepost) %></td>
-        <td><%= link_to '삭제하기', @freepost, method: :delete, data: { confirm: 'Are you sure?' } %></td>
-         <% else%>
-         <td></td>
-         <%end%>
-<%= link_to 'Back', freeposts_path %>
+<a1> 내용 </a1>
+<div class = "d-flex justify-content-center">
+    <ul class="list-group">
+        <li class="list-group-item bg-light" style="width:800px; height:400px; padding:20px; margin:20px;">
+        <%= @freepost.content %></li>
+    </ul>
+</div>
+
+
+  <div class = "d-flex justify-content-center">
+    <%=form_for Comment.new, url:freepost_comments_path(@freepost.id) do |f|%>
+      <%=f.label "댓글" %>
+      <%=f.text_field :content, :size=>"101" %> </li> <br>
+      <%=f.submit "작성" %>
+      <br>
+        <%@freepost.comments.each do |comment| %>
+        </div>
+        <p class="text-center"><%=comment.content %> <%=link_to '댓글삭제',
+          freepost_comment_path(@freepost.id, comment.id), method: 'delete'%></p>
+          <br>
+        <% end %>
+  </div>
+
+
+<div class = "button1">
+  <div class = "d-flex justify-content-center">
+    <%= link_to '게시물수정', edit_freepost_path(@freepost) %> 
+    <%= link_to '뒤로가기', freeposts_path %>
+    <% end %>
+  </div>
+</div>
+
+
+
+
+
+
+
