--- a/app/views/freeposts/_form.html.erb
+++ b/app/views/freeposts/_form.html.erb
@@ -11,17 +11,29 @@
     </div>
   <% end %>
 
+<div class="form-group container">
   <div class="field">
     <%= f.label :title %>
-    <%= f.text_field :title %>
+    <%= f.text_field :title, class: "ff form-control text-center" %>
   </div>
 
   <div class="field">
     <%= f.label :content %>
-    <%= f.text_area :content %>
+    <%= f.text_area :content, class: "ff form-control text-center" %>
   </div>
 
-  <div class="actions">
-    <%= f.submit %>
+
+  <br>
+  <div class="d-flex justify-content-md-center">  
+    <div class="actions">
+      <button type="submit" class="btn btn-info">
+      제출
+      </button>      
+    </div>
+    &nbsp
+    <button class="btn btn-info">
+      <%= link_to '뒤로', freeposts_path %>
+    </button>
   </div>
+</div>  
 <% end %>
