--- a/app/views/freeposts/new.html.erb
+++ b/app/views/freeposts/new.html.erb
@@ -1,5 +1,7 @@
-<h1>New Freepost</h1>
+<br>
+<br>
+<h1 class="text-center text-white">New Freepost</h1>
 
 <%= render 'form', freepost: @freepost %>
 
-<%= link_to 'Back', freeposts_path %>
+
