--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -8,8 +8,10 @@ table{
 }
 
 .ff{
-    background-color: transparent !important;
-    color: white !important;
+    background-color: white !important;
+    opacity: 0.5 ;
+    color: black !important;
+    font-weight:bold ;
     }
 
 //-sy
@@ -32,6 +34,11 @@ color: gainsboro ;
     color: white ;
     font-weight: 300 ;
     opacity: 0.8 ;
+}
+
+.topnav {
+    background-color: black ;
+    opacity: 0.5 ;
 }
 
 
@@ -104,6 +111,7 @@ a1 {
 .contentmake {
     padding: 20px 30px;
     width: 70%;
+}
 
 .bdsize {
     max-width: 500px;
