--- a/app/views/post_ns/_form.html.erb
+++ b/app/views/post_ns/_form.html.erb
@@ -11,45 +11,49 @@
     </div>
   <% end %>
 
-<div class="form-group container">
-  <div class="ff field">
-    <%= f.label :date %>
+<div class=content-center>
+<div class="form-group container p-5">
+  <div class="field content-center  ">
+    <%= f.label :날짜 %>
     <br>
-    <%= f.date_select :date, class: "ff form-control" %>
+    <%= f.date_select :date, class: "ff form-control text-center" %>
   </div>
-
-  <div class="ff field">
-    <%= f.label :title %>
-    <%= f.text_field :title, class: "ff form-control" %>
+<br>
+  <div class="field mx-auto" style="width:400px;">
+    <%= f.label :내역 %>
+    <%= f.text_field :title, class: "ff form-control  text-center", value: "ex) 춘자 뒷풀이" %>
   </div>
-
-  <div class="ff field">
-    <%= f.label :total_price %>
-    <%= f.number_field :total_price, class: "ff form-control" %>
-  </div>
-
-  <div class="ff field">
-    <%= f.label :member %>
-    <%= f.number_field :member, class: "ff form-control" %>
-  </div>
-
-  <div class="ff field">
-    <%= f.label :etc %>
-    <%= f.text_field :etc, class: "ff form-control" %>
+  <br>
+    <div class="field mx-auto" style="width:400px;">
+      <%= f.label :총비용 %>
+      <%= f.number_field :total_price, class: "ff form-control text-center", value: "156000" %>
+    </div>
+    <br>
+    <div class="field mx-auto" style="width:400px;">
+      <%= f.label :인원수 %>
+      <%= f.number_field :member, class: "ff form-control text-center",value: "10" %>
+    </div>
+  <br>
+  <div class="field mx-auto" style="width:400px;">
+    <%= f.label :메모 %>
+    <%= f.text_field :etc, class: "ff form-control text-center",value: "멋쟁이사자처럼 정기뒷풀이" %>
   </div>
   
 
 <br>
-<div class="d-flex">
-    <div class="actions">
-      <button type="submit" class="btn btn-info">
-      제출
-      </button>
-    &nbsp    
-    </div>
+<div class="d-flex justify-content-md-center">
     <button class="btn btn-info">
       <%= link_to '뒤로', post_ns_path %>
       </button>
-  </div>
+    
+    &nbsp 
+    &nbsp 
+    <div class="actions">
+      <button type="submit" class="btn btn-info">
+      제출
+      </button>   
+    </div>
+    
+</div>
 </div>
 <% end %>
