--- a/app/views/post_ns/new.html.erb
+++ b/app/views/post_ns/new.html.erb
@@ -1,6 +1,6 @@
 <br>
 <br>
-<h1 class="text-center text-white">New Post N</h1>
-
+<h1 class="text-center text-white">더치페이 내역</h1>
+<br>
 <%= render 'form', post_n: @post_n %>
 
