--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -148,3 +148,24 @@ a1 {
     flex-direction: column;
     justify-content: center;
 }
+
+.bg-tr {
+    background: rgba(163, 179, 176, 0.192);
+}
+
+.font25 {
+    font-size: 25px;
+}
+
+.font20 {
+    font-size:20px;
+}
+
+.plr-4 {
+    padding-left: 4rem;
+    padding-right: 4rem;
+}
+
+.bgradius {
+    border-radius : 3rem;
+}
