--- a/app/views/check/index.html.erb
+++ b/app/views/check/index.html.erb
@@ -1,34 +1,38 @@
+<div>
 
-<div class=>
     <form action="/posts/<%= @post.id%>/check" method="post" class="my-5 ">
-        <input type="string" name="gets" class=" texttr inputsize" >
+        <input type="string" name="gets" class=" texttr text-white inputsize" placeholder="ex) 신한결, 신예찬, 이수영, 이재승, 최희윤" >
         <input type="submit" value="입력">
+        <p>' , ' 로 구분해서 적어주세요</p>
+
     </form>
 </div>
 
 
-<div class="d-flex justify-content-around">
-    <div class="divposition">
-       <p> 안 낸사람 </p>
+<div class="d-flex justify-content-around font20">
+    <div class="divposition pt-4 pb-5 plr-4 bg-tr d-flex flex-column ml-3 justify-content-start bgradius">
+       <p class="font25 mb-5"> 미 입금자 </p>
+       
          <% @checks_sort.each do |x| %>
             <% if x.money != 1 %>
                 <form action="/posts/<%= @post.id%>/check/yes/<%=x.id%>" mehtod="post">
-                    <%= x.name %>
-                    <input type="submit" value="확인">
-                    <%= link_to '삭제', post_check_path(@post.id,x.id), method: :delete%>
+                    <%= x.name %> &nbsp &nbsp &nbsp &nbsp &nbsp &nbsp
+                    <input type="submit" value="확인" class="btn btnsize border-white bg-transparent text-white"> &nbsp
+                    <%= link_to 'x', post_check_path(@post.id,x.id), method: :delete, class: "btn btnsize border-white" %>
 
                 </form>
             <% end %>
+        
         <% end %>
     </div>
-    <div class="divposition">
-        낸사람
+    <div class="divposition pt-4 pb-5 bg-tr plr-4 d-flex flex-column mr-3 justify-content-start bgradius">
+        <p class="font25 mb-5">입금자</p>
         <% @checks.each do |x| %>
             <% if x.money == 1 %>
                 <form action="/posts/<%= @post.id%>/check/no/<%=x.id%>" mehtod="post">
-                    <%= x.name %>
-                    <input type="submit" value="확인">
-                    <%= link_to '삭제', post_check_path(@post.id,x.id), method: :delete%>
+                    <%= x.name %> &nbsp &nbsp &nbsp &nbsp &nbsp &nbsp
+                    <input type="submit" value="취소" class="btn border-white bg-transparent text-white"> &nbsp
+                    <%= link_to 'x', post_check_path(@post.id,x.id), method: :delete, class: "btn border-white"%>
                     
                 </form>
             <% end %>
@@ -37,6 +41,6 @@
 </div>   
         <br>
         <a class="nav-link" href="/posts/<%= @post.id%>">뒤로가기</a>
-        <a class="nav-link" href="/posts">글목록보기</a>
+        <a class="nav-link" href="/posts">전체 목록 보기</a>
 
  
