--- a/app/views/check_n/index.html.erb
+++ b/app/views/check_n/index.html.erb
@@ -1,38 +1,44 @@
 
+<div>
+    <form action="/post_ns/<%= @post_n.id%>/check_n" method="post" class="my-5 ">
+        <input type="string" name="gets" class=" texttr text-white inputsize" placeholder="ex) 신한결, 신예찬, 이수영, 이재승, 최희윤">
+        <input type="submit" value="입력" >
+        <p>' , ' 로 구분해서 적어주세요</p>
+    </form>
+</div>
 
-<form action="/post_ns/<%= @post_n.id%>/check_n" method="post">
-    <input type="string" name="gets">
-    <input type="submit" value="입력">
-</form>
+<div class="d-flex justify-content-around font20">
+    <div class="divposition pt-4 pb-5 plr-4 bg-tr d-flex flex-column ml-3 justify-content-start bgradius">
+        <p class="font25 mb-5">미 입금자</p>
 
+        <% @checks_sort.each do |x| %>
+            <% if x.moeny != 1 %>
+                <form action="/post_ns/<%= @post_n.id%>/check_n/yes/<%=x.id%>" mehtod="post">
+                    <%= x.name %> &nbsp &nbsp &nbsp &nbsp &nbsp &nbsp &nbsp 
+                    <input type="submit" value="확인" class="btn btnsize border-white bg-transparent text-white"> 
+                    <%= link_to 'X', post_n_check_n_path(@post_n.id,x.id), method: :delete, class: "btn btnsize border-white"%>
 
+                </form>
+            <% end %>
+        <% end %>
+    </div>
+    <div class="divposition pt-4 pb-5 bg-tr plr-4 d-flex flex-column mr-3 justify-content-start bgradius">
 
-안 낸사람
-
-<% @checks_sort.each do |x| %>
-    <% if x.moeny != 1 %>
-        <form action="/post_ns/<%= @post_n.id%>/check_n/yes/<%=x.id%>" mehtod="post">
-            <%= x.name %>
-            <input type="submit" value="확인">
-            <%= link_to '삭제', post_n_check_n_path(@post_n.id,x.id), method: :delete%>
-
-        </form>
-    <% end %>
-<% end %>
-<br>ㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡ<br>
-
-낸사람
-<% @checks.each do |x| %>
-    <% if x.moeny == 1 %>
-        <form action="/post_ns/<%= @post_n.id%>/check_n/no/<%=x.id%>" mehtod="post">
-            <%= x.name %>
-            <input type="submit" value="확인">
-            <%= link_to '삭제', post_n_check_n_path(@post_n.id,x.id), method: :delete%>
-            
-        </form>
-    <% end %>
-<% end %>
-<br>
-<a class="nav-link" href="/post_ns">목록보기</a>
-<br>
+        <p class="font25 mb-5">입금자</p>
+        <% @checks.each do |x| %>
+            <% if x.moeny == 1 %>
+                <form action="/post_ns/<%= @post_n.id%>/check_n/no/<%=x.id%>" mehtod="post">
+                    <%= x.name %> &nbsp &nbsp &nbsp &nbsp &nbsp &nbsp &nbsp 
+                    <input type="submit" value="취소" class="btn border-white bg-transparent text-white">
+                    <%= link_to 'X', post_n_check_n_path(@post_n.id,x.id), method: :delete, class: "btn border-white"%>
+                    
+                </form>
+            <% end %>
+        <% end %>
+    </div>
+</div>
+        <br>
+        <a class="nav-link" href="/post_ns/<%= @post_n.id%>">뒤로가기</a>
+        <a class="nav-link" href="/post_ns">전체 목록 보기</a>
+        <br>
 
