--- a/app/views/freeposts/_form.html.erb
+++ b/app/views/freeposts/_form.html.erb
@@ -11,16 +11,16 @@
     </div>
   <% end %>
 
-  <div class="field">
+ <div class=" field">
     <%= f.label :title %>
-    <%= f.text_field :title %>
+    <%= f.text_field :title, class: "cc form-control" %>
   </div>
-
-  <div class="field">
+  <br>
+  <div class=" field">
     <%= f.label :content %>
-    <%= f.text_area :content %>
+    <%= f.text_area :content, class: "cc form-control" %>
   </div>
-
+<br>
   <div class="actions">
     <%= f.submit %>
   </div>
