--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -104,6 +104,7 @@ a1 {
 .contentmake {
     padding: 20px 30px;
     width: 70%;
+}
 
 .bdsize {
     max-width: 500px;
@@ -139,4 +140,11 @@ a1 {
     display: flex;
     flex-direction: column;
     justify-content: center;
+}
+
+.cc {
+    background-color: white !important;
+    opacity: 0.5;
+    color: black !important;
+    font-weight:bold;
 }
