--- a/app/views/freeposts/edit.html.erb
+++ b/app/views/freeposts/edit.html.erb
@@ -1,6 +1,7 @@
-<h1>Editing Freepost</h1>
+<h1>게시물 수정하기</h1>
 
 <%= render 'form', freepost: @freepost %>
-
-<%= link_to 'Show', @freepost %> |
-<%= link_to 'Back', freeposts_path %>
+<br>
+<%= link_to '게시물보기', @freepost %> &nbsp |
+&nbsp
+<%= link_to '뒤로가기', freeposts_path %>
