--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -7,19 +7,24 @@ table{
     text-align: center;
 }
 
+
+thead {
+    background-color: rgba(255, 255, 255, 0.384);
+    text-align: center;
+
+}
+
+.inputbox {
+    background-color:tansparent;
+}
+//-sy
+
+
 .ff{
     background-color: transparent !important;
     color: white !important;
     }
 
-.undernavhr{
-    color:light-gray;
-    
-}
-
-
-
-//-sy
 
 .navi
 {font-family: "Noto Sans KR" ;
