--- a/app/views/posts/_form.html.erb
+++ b/app/views/posts/_form.html.erb
@@ -23,6 +23,11 @@
     <%= f.text_field :title, class: "ff form-control" %>
   </div>
   <br>
+    <div class="field">
+    <%= f.label :member, class: "ff text-left" %>
+    <%= f.number_field :member, class: "ff form-control" %>
+  </div>
+  <br>
   <div class="field">
     <%= f.label :etc, class: "ff text-left" %>
     <%= f.text_field :etc, class: "ff form-control" %>
