--- a/app/views/posts/show.html.erb
+++ b/app/views/posts/show.html.erb
@@ -1,22 +1,19 @@
-<div id="hidden">
-<p>
-  <strong>Date:</strong>
-  <%= @post.date %>
-</p>
+<br>
+<br>
+<br>
+<div class="text-center">
+  <span class="h4"><%= @post.date %> </span>  
+ &nbsp  &nbsp
+  <span class="h2"><%= @post.title %></span>
+ &nbsp  &nbsp
+  <span class="h5"> <%= @post.etc %> </span> 
+</div>
 
-<p>
-  <strong>Title:</strong>
-  <%= @post.title %>
-</p>
-
-<p>
-  <strong>Etc:</strong>
-  <%= @post.etc %>
-</p>
-
-
+<br>
+<br>
+<div id ="hidden">
 <%=form_for Table.new, url:post_table_index_path(post_id: @post.id) do |f|%>
-  <%=f.label "항목"%>
+  <%=f.label "항목", class: "border-0"%>
   <%=f.text_field :item %>
   
   <%=f.label "수량"%>
@@ -27,15 +24,14 @@
   
   <%=f.label "비고"%>
   <%=f.text_field :etc %>  
+
   <%=f.submit '제출'%>
 <% end %>
-
 </div>
 
 
-
-
 <table class="table">
+<thead>
   <tr>
     <th>항목</th>
     <th>수량</th>
@@ -44,6 +40,7 @@
     <th>비고</th>
     <th>삭제</th>
   </tr>
+</thead>
 
   <% a = 0%>
   <%@post.tables.each do |table|%>
@@ -62,37 +59,43 @@
         <%= link_to '삭제', post_table_path(@post.id,table.id), method: 'delete'%>
       </td>
     </tr>
-  <% end%>
+ <%end%>
+</table>
 
+<br>
+<div class=result>
+<table class="table ">
   <% @post.total_price = a %>
+  <thead>
   <tr>
-    <th>총 사용비용</th>
-    <th></th>
-    <th></th>
-    <th><%=@post.tables.sum("total")%></th>
-    <th></th>
+    <th>인원수</th>
+    
+     <th>총 사용비용</th>
+    
+     <th>인당</th>
+   
   </tr>
+  </thead>
  
-  <%# 인원수추가  %>
-
- <tr>
-    <th>인당얼마?</th>
-    <th></th>
-    <th></th>
+  <tr>
+  <th><%=@post.member%></th>
+  <th><%=@post.tables.sum("total")%></th>
     <th>
-    <% if @post.member.to_i != 0 %>
+  <% if @post.member.to_i != 0 %>
     <%=@post.tables.sum("total").to_i / @post.member.to_i  %>
     <% else %>
     <%= puts "Error" %>
     <%end%>
     </th>
-    <th></th>
-    <th></th>
-  </tr>
+
   
+  </tr>
+
 </table>
 
+</div>
 <br>
+ 
 
 
 <a href="/posts/<%= @post.id%>/check">명단확인</a>
@@ -115,3 +118,4 @@
 
 <%= link_to 'Back', posts_path %>
 
+</box>
