--- a/app/views/post_ns/_form.html.erb
+++ b/app/views/post_ns/_form.html.erb
@@ -21,22 +21,22 @@
 <br>
   <div class="field mx-auto" style="width:400px;">
     <%= f.label :내역 %>
-    <%= f.text_field :title, class: "ff form-control  text-center", value: "ex) 춘자 뒷풀이" %>
+    <%= f.text_field :title, class: "ff form-control  text-center", placeholder: "ex) 춘자 뒷풀이" %>
   </div>
   <br>
     <div class="field mx-auto" style="width:400px;">
       <%= f.label :총비용 %>
-      <%= f.number_field :total_price, class: "ff form-control text-center", value: "156000" %>
+      <%= f.number_field :total_price, class: "ff form-control text-center", placeholder: "156000" %>
     </div>
     <br>
     <div class="field mx-auto" style="width:400px;">
       <%= f.label :인원수 %>
-      <%= f.number_field :member, class: "ff form-control text-center",value: "10" %>
+      <%= f.number_field :member, class: "ff form-control text-center", placeholder: "10" %>
     </div>
   <br>
   <div class="field mx-auto" style="width:400px;">
     <%= f.label :메모 %>
-    <%= f.text_field :etc, class: "ff form-control text-center",value: "멋쟁이사자처럼 정기뒷풀이" %>
+    <%= f.text_field :etc, class: "ff form-control text-center", placeholder: "멋쟁이사자처럼 정기뒷풀이" %>
   </div>
   
 
