--- a/app/views/freeposts/_form.html.erb
+++ b/app/views/freeposts/_form.html.erb
@@ -11,22 +11,31 @@
     </div>
   <% end %>
 
+<div class="content-center">
+ <div class=" field mx-auto" style="width:400px;">
+    <%= f.label :제목 %>
+    <%= f.text_field :title, class: "ff form-control" %>
 
- <div class=" field">
-    <%= f.label :title %>
-    <%= f.text_field :title, class: "cc form-control" %>
-
-  </div>
-  <br>
-  <div class=" field">
-    <%= f.label :content %>
-
-    <%= f.text_area :content, class: "cc form-control" %>
   </div>
 <br>
-  <div class="actions">
-    <%= f.submit %>
+  <div class=" field mx-auto" style="width:400px;">
+    <%= f.label :내용 %>
 
+    <%= f.text_area :content, class: "ff form-control" %>
   </div>
-</div>  
+<br>
+  <div class="d-flex justify-content-md-center">
+    <button class="btn btn-info">
+      <%= link_to '뒤로', freeposts_path %>
+      </button>
+  
+    &nbsp &nbsp 
+    <div class="actions">
+      <button type="submit" class="btn btn-info">
+      제출
+      </button>   
+    </div>
+
+    
+  </div>  
 <% end %>
