마지막이자

--- a/app/views/check/index.html.erb
+++ b/app/views/check/index.html.erb
@@ -1,7 +1,7 @@
 <div>
 
     <form action="/posts/<%= @post.id%>/check" method="post" class="my-5 ">
-        <input type="string" name="gets" class=" texttr text-white inputsize" placeholder="ex) 신한결, 신예찬, 이수영, 이재승, 최희윤" >
+        <input type="string" name="gets" class=" texttr inputsize" placeholder="ex) 신한결, 신예찬, 이수영, 이재승, 최희윤" >
         <input type="submit" value="입력">
         <p>' , ' 로 구분해서 적어주세요</p>
 
