--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -194,3 +194,11 @@ a1 {
 .bgradius {
     border-radius : 3rem;
 }
+
+.bgradius2 {
+    border-radius : 1rem;
+}
+
+.btnsize {
+    font-size: 10px;
+}
