--- a/app/views/posts/index.html.erb
+++ b/app/views/posts/index.html.erb
@@ -4,6 +4,7 @@
 <table class="table">
   <thead>
     <tr>
+      <th>No.</th>
       <th>날짜</th>
       <th>제목</th>
       <th>총액</th>
@@ -15,6 +16,7 @@
   <tbody>
     <% @posts.each do |post| %>
       <tr class="tabletext">
+        <td><%= post.id%></td>
         <td><%= post.date %></td>
         <td><%= link_to post.title, post %></td>
         <td><%= post.tables.sum("total") %></td>
