--- a/app/views/post_ns/index.html.erb
+++ b/app/views/post_ns/index.html.erb
@@ -1,5 +1,7 @@
+<br>
+<br>
 <div class="container">
-<h1>Post Ns</h1>
+<h1>Dutch Pay</h1>
 
 <table class="table">
   <thead>
@@ -28,5 +30,5 @@
 
 <br>
 
-<%= link_to 'New Post N', new_post_n_path %>
+<%= link_to '새로운 글 쓰기', new_post_n_path %>
 </div>
