--- a/app/views/posts/index.html.erb
+++ b/app/views/posts/index.html.erb
@@ -28,6 +28,8 @@
 
 <br>
 
-<%= link_to '새로운 예산 기획 짜기', new_post_path %><br>
-<a href="/posts/all">다른 사람 예산 기획 보기</a>
+<%= link_to '새로운 글 쓰기', new_post_path %> <br><br>
+<button class="btn bgradius2 border-white bg-transparent text-white"><a href="/posts/all">다른 사람 예산 기획 보기</a></button>
+
+
 </div>
