--- a/app/views/posts/new.html.erb
+++ b/app/views/posts/new.html.erb
@@ -1,6 +1,6 @@
 <br>
 <br>
-<h1 class="text-center text-white">예산 기획안</h1>
+<h1 class="text-center text-white">Budget Plan</h1>
 <br>
 <%= render 'form', post: @post %>
 
