--- a/app/views/posts/all.html.erb
+++ b/app/views/posts/all.html.erb
@@ -1,11 +1,14 @@
 
+<br>
+<br>
 <div class = "container">
-<h1> 다른 사람의 기획안 보기 </h1>
+<h1> Other Budget Plans </h1>
 
 
 <table class = "table">
   <thead>
     <tr>
+      <th>No.</th>
       <th>Date</th>
       <th>Title</th>
       <th>User</th>
@@ -15,6 +18,7 @@
   <tbody>
     <% @posts.each do |post| %>
       <tr>
+        <td><%= post.id %></td>      
         <td><%= post.date %></td>
         <td><%= link_to post.title, post %></td>
         <td><%= post.user.username  %></td>   
