--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -126,8 +126,8 @@ a1 {
 .bdsize {
     max-width: 500px;
     width: 300px;
-    margin-top: 120px;
-    margin-left: 200px;
+    margin-top: 150px;
+    margin-left: 240px;
 
 }
 
@@ -142,6 +142,7 @@ a1 {
     display: flex;
     flex-direction: column;
     justify-content: center;
+    margin-top: 3rem;
 }
 
 .mt-7 {
@@ -194,4 +195,16 @@ a1 {
 
 .btnsize {
     font-size: 10px;
+}
+
+.mr-7 {
+    margin-right : 5rem;
+}
+
+.ml-7 {
+    margin-left: 5rem;
+}
+
+.titlesize{
+    font-size : 60px;
 }
